# meta

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING_8md_source.html  LICENSE  README.md  README_8md_source.html  annotated.html  appveyor.yml  autotoc_md0.html  classes.html  classmeta_1_1any-members.html  classmeta_1_1any.html  classmeta_1_1base-members.html  classmeta_1_1base.html  classmeta_1_1conv-members.html  classmeta_1_1conv.html  classmeta_1_1ctor-members.html  classmeta_1_1ctor.html  classmeta_1_1data-members.html  classmeta_1_1data.html  classmeta_1_1dtor-members.html  classmeta_1_1dtor.html  classmeta_1_1factory-members.html  classmeta_1_1factory.html  classmeta_1_1func-members.html  classmeta_1_1func.html  classmeta_1_1handle-members.html  classmeta_1_1handle.html  classmeta_1_1meta__any-members.html  classmeta_1_1meta__any.html  classmeta_1_1meta__base-members.html  classmeta_1_1meta__base.html  classmeta_1_1meta__conv-members.html  classmeta_1_1meta__conv.html  classmeta_1_1meta__ctor-members.html  classmeta_1_1meta__ctor.html  classmeta_1_1meta__data-members.html  (+47 more)
.github/workflows/: build.yml  coverage.yml
cmake/in/: googletest.in  metaBuildConfig.cmake.in  metaConfig.cmake.in
docs/: CMakeLists.txt  CONTRIBUTING.md  extra.dox
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  (+10 more)
src/meta/: factory.hpp  meta.hpp  policy.hpp
test/: CMakeLists.txt  meta.cpp  odr.cpp
